--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,216 +1,262 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
+    android:columnCount="13"
+    android:padding="20dp"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:rowCount="7"
+    tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/cup2_1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="9"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_2"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="8"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_3"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="7"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_4"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="6"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_5"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="5"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_6"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="4"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_7"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_row="1"
+        android:background="@drawable/opponent_smallcup"
+        android:text="@string/str_Zero" />
+
+    <Button
+        android:id="@+id/cup2_store"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_column="1"
+        android:layout_gravity="center"
+        android:layout_row="3"
+        android:background="@drawable/opponent_bigcup"
+        android:clickable="false"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/cup1_1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="3"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_2"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="4"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_3"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="5"
+        android:layout_columnWeight="0"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_4"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="6"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_5"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="7"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_6"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="8"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_7"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="9"
+        android:layout_row="5"
+        android:background="@drawable/player_smallcup"
+        android:text="@string/str_Zero"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:id="@+id/cup1_store"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_column="11"
+        android:layout_gravity="center"
+        android:layout_row="3"
+        android:background="@drawable/player_bigcup"
+        android:clickable="false"
+        android:text="@string/str_Zero"
+        android:textSize="30sp" />
 
 
-    <GridLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+    <Space
+        android:id="@+id/spc_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="5"
+        android:layout_row="0"
+        android:layout_rowWeight="0.5" />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="5"
-            android:layout_rowWeight="0.5" />
+    <Space
+        android:id="@+id/spc_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="5"
+        android:layout_row="6"
+        android:layout_rowWeight="0.5" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_7"
-            android:layout_row="1"
-            android:layout_column="3" />
+    <Space
+        android:id="@+id/spc_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_columnWeight="0.5"
+        android:layout_row="5"
+        android:layout_rowWeight="0" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_6"
-            android:layout_row="1"
-            android:layout_column="4" />
+    <Space
+        android:id="@+id/spc_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="12"
+        android:layout_columnWeight="0.5"
+        android:layout_row="5"
+        android:layout_rowWeight="0" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_5"
-            android:layout_row="1"
-            android:layout_column="5" />
+    <Space
+        android:id="@+id/spc_storeTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_row="2"
+        android:layout_rowWeight="0.2" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_4"
-            android:layout_row="1"
-            android:layout_column="6" />
+    <Space
+        android:id="@+id/spc_storeBot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_row="4"
+        android:layout_rowWeight="0.2" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_3"
-            android:layout_row="1"
-            android:layout_column="7" />
+    <Space
+        android:id="@+id/spc_plStore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="10"
+        android:layout_columnWeight="1.5"
+        android:layout_row="3"
+        android:layout_rowWeight="1" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_2"
-            android:layout_row="1"
-            android:layout_column="8" />
+    <Space
+        android:id="@+id/spc_opStore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="2"
+        android:layout_columnWeight="1.5"
+        android:layout_row="3"
+        android:layout_rowWeight="1" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_1"
-            android:layout_row="1"
-            android:layout_column="9" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup2_store"
-            android:textSize="30sp"
-            android:clickable="false"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_gravity="top|left|bottom|right"
-            android:layout_columnWeight="1.5" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="10"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_store"
-            android:textSize="30sp"
-            android:clickable="false"
-            android:layout_row="2"
-            android:layout_column="11"
-            android:layout_gravity="top|left|bottom|right"
-            android:layout_columnWeight="1.5" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_columnWeight="1" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_1"
-            android:layout_row="3"
-            android:layout_column="3" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_2"
-            android:layout_row="3"
-            android:layout_column="4" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_3"
-            android:layout_row="3"
-            android:layout_column="5"
-            android:layout_columnWeight="0" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_4"
-            android:layout_row="3"
-            android:layout_column="6" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_5"
-            android:layout_row="3"
-            android:layout_column="7" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_6"
-            android:layout_row="3"
-            android:layout_column="8" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/cup1_7"
-            android:layout_row="3"
-            android:layout_column="9" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="12"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="0" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="4"
-            android:layout_column="5"
-            android:layout_rowWeight="0.5" />
-    </GridLayout>
-
-</RelativeLayout>
+</GridLayout>
