--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,17 +1,19 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
     android:columnCount="13"
-    android:padding="20dp"
+    android:padding="0dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:rowCount="7"
-    tools:context=".MainActivity">
+    tools:context=".GameActivity">
 
     <Button
         android:id="@+id/cup2_1"
@@ -71,7 +73,8 @@
         android:layout_column="4"
         android:layout_row="1"
         android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
+        android:text="@string/str_Zero"
+        android:layout_gravity="fill" />
 
     <Button
         android:id="@+id/cup2_7"
@@ -195,7 +198,9 @@
         android:layout_height="wrap_content"
         android:layout_column="5"
         android:layout_row="0"
-        android:layout_rowWeight="0.5" />
+        android:layout_rowWeight="0.5"
+        android:layout_columnWeight="0"
+        android:layout_gravity="fill" />
 
     <Space
         android:id="@+id/spc_bottom"
@@ -203,25 +208,28 @@
         android:layout_height="wrap_content"
         android:layout_column="5"
         android:layout_row="6"
-        android:layout_rowWeight="0.5" />
+        android:layout_rowWeight="0.5"
+        android:layout_gravity="fill" />
 
     <Space
         android:id="@+id/spc_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
-        android:layout_columnWeight="0.5"
+        android:layout_columnWeight="1"
         android:layout_row="5"
-        android:layout_rowWeight="0" />
+        android:layout_rowWeight="0"
+        android:layout_gravity="fill" />
 
     <Space
         android:id="@+id/spc_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="12"
-        android:layout_columnWeight="0.5"
+        android:layout_columnWeight="1"
         android:layout_row="5"
-        android:layout_rowWeight="0" />
+        android:layout_rowWeight="0"
+        android:layout_gravity="fill" />
 
     <Space
         android:id="@+id/spc_storeTop"
@@ -230,7 +238,8 @@
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_row="2"
-        android:layout_rowWeight="0.2" />
+        android:layout_rowWeight="0.2"
+        android:layout_gravity="fill" />
 
     <Space
         android:id="@+id/spc_storeBot"
@@ -239,14 +248,15 @@
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_row="4"
-        android:layout_rowWeight="0.2" />
+        android:layout_rowWeight="0.2"
+        android:layout_gravity="fill" />
 
     <Space
         android:id="@+id/spc_plStore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="10"
-        android:layout_columnWeight="1.5"
+        android:layout_columnWeight="1"
         android:layout_row="3"
         android:layout_rowWeight="1" />
 
@@ -255,8 +265,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="2"
-        android:layout_columnWeight="1.5"
+        android:layout_columnWeight="1"
         android:layout_row="3"
-        android:layout_rowWeight="1" />
+        android:layout_rowWeight="1"
+        android:layout_gravity="fill" />
 
 </GridLayout>
