--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,274 +1,9 @@
-<GridLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:columnCount="13"
-    android:padding="0dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:rowCount="7"
-    android:background="@drawable/background"
-    tools:context=".GameActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/master"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:focusable="false"
+    android:focusableInTouchMode="false" >
 
-    <Button
-        android:id="@+id/cup2_1"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="9"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
-
-    <Button
-        android:id="@+id/cup2_2"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="8"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
-
-    <Button
-        android:id="@+id/cup2_3"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="7"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
-
-    <Button
-        android:id="@+id/cup2_4"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="6"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
-
-    <Button
-        android:id="@+id/cup2_5"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="5"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
-
-    <Button
-        android:id="@+id/cup2_6"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="4"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero"
-        android:layout_gravity="fill" />
-
-    <Button
-        android:id="@+id/cup2_7"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="3"
-        android:layout_row="1"
-        android:background="@drawable/opponent_smallcup"
-        android:text="@string/str_Zero" />
-
-    <Button
-        android:id="@+id/cup2_store"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_column="1"
-        android:layout_gravity="center"
-        android:layout_row="3"
-        android:background="@drawable/opponent_bigcup"
-        android:clickable="false"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff"
-        android:textSize="170sp" />
-
-    <Button
-        android:id="@+id/cup1_1"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="3"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_2"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="4"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_3"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="5"
-        android:layout_columnWeight="0"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_4"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="6"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_5"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="7"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_6"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="8"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_7"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="9"
-        android:layout_row="5"
-        android:background="@drawable/player_smallcup"
-        android:text="@string/str_Zero"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/cup1_store"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_column="11"
-        android:layout_gravity="center"
-        android:layout_row="3"
-        android:background="@drawable/player_bigcup"
-        android:clickable="false"
-        android:text="@string/str_Zero"
-        android:textSize="70sp" />
-
-
-    <Space
-        android:id="@+id/spc_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="5"
-        android:layout_row="0"
-        android:layout_rowWeight="0.5"
-        android:layout_columnWeight="0"
-        android:layout_gravity="fill" />
-
-    <Space
-        android:id="@+id/spc_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="5"
-        android:layout_row="6"
-        android:layout_rowWeight="0.5"
-        android:layout_gravity="fill" />
-
-    <Space
-        android:id="@+id/spc_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
-        android:layout_row="5"
-        android:layout_rowWeight="0"
-        android:layout_gravity="fill" />
-
-    <Space
-        android:id="@+id/spc_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="12"
-        android:layout_columnWeight="1"
-        android:layout_row="5"
-        android:layout_rowWeight="0"
-        android:layout_gravity="fill" />
-
-    <Space
-        android:id="@+id/spc_storeTop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
-        android:layout_row="2"
-        android:layout_rowWeight="0.2"
-        android:layout_gravity="fill" />
-
-    <Space
-        android:id="@+id/spc_storeBot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
-        android:layout_row="4"
-        android:layout_rowWeight="0.2"
-        android:layout_gravity="fill" />
-
-    <Space
-        android:id="@+id/spc_plStore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="10"
-        android:layout_columnWeight="1"
-        android:layout_row="3"
-        android:layout_rowWeight="1" />
-
-    <Space
-        android:id="@+id/spc_opStore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
-        android:layout_row="3"
-        android:layout_rowWeight="1"
-        android:layout_gravity="fill" />
-
-</GridLayout>
+</FrameLayout>
