--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -14,7 +14,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="<"/>
+            android:text="Back"/>
 
         <TextView
             android:id="@+id/statistics_text"
