Extended menu with player vs player, player vs ai, and remote play. Needs hooking into game functionality,a dn some multiplayer info/functionality needs adding

--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/statistics_text"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/str_Statistics"
             android:textColor="#000"
@@ -109,7 +109,7 @@
                 android:id="@+id/average_score_per_game_layout"
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:layout_gravity="center">
 
