Added dynamic data to StatisticsActivity

--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -32,129 +32,8 @@
             ></Spinner>
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#000">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.5"
-            android:baselineAligned="false"
-            android:layout_margin="10dp">
-
-            <LinearLayout
-                android:id="@+id/average_move_time_layout"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:layout_gravity="center">
-
-                <TextView
-                    android:id="@+id/average_move_time_label_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/str_AverageMoveTime"
-                    android:textColor="#FFF"
-                    android:textSize="7pt" />
-
-                <TextView
-                    android:id="@+id/average_move_time_value_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1:44"
-                    android:textColor="#50E3C2"
-                    android:textSize="27pt" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/highest_capture_in_one_turn_layout"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:layout_gravity="center">
-
-                <TextView
-                    android:id="@+id/highest_capture_in_one_turn_label_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/str_HighestCaptureInOneTurn"
-                    android:textColor="#FFF"
-                    android:textSize="7pt" />
-
-                <TextView
-                    android:id="@+id/highest_capture_in_one_turn_value_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="9"
-                    android:textColor="#50E3C2"
-                    android:textSize="27pt" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.5"
-            android:baselineAligned="false"
-            android:layout_margin="10dp">
-
-            <LinearLayout
-                android:id="@+id/average_score_per_game_layout"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:layout_gravity="center">
-
-                <TextView
-                    android:id="@+id/average_score_per_game_label_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/str_AverageScorePerGame"
-                    android:textColor="#FFF"
-                    android:textSize="7pt" />
-
-                <TextView
-                    android:id="@+id/average_score_per_game_value_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="23.3"
-                    android:textColor="#50E3C2"
-                    android:textSize="27pt" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/highest_number_of_consecutive_turns_layout"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:layout_gravity="center">
-
-                <TextView
-                    android:id="@+id/highest_number_of_consecutive_turns_label_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/str_HighestNumberOfConsecutiveTurns"
-                    android:textColor="#FFF"
-                    android:textSize="7pt" />
-
-                <TextView
-                    android:id="@+id/highest_number_of_consecutive_turns_value_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="12"
-                    android:textColor="#50E3C2"
-                    android:textSize="27pt" />
-            </LinearLayout>
-        </LinearLayout>
-
-    </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_layout"></ScrollView>
 </LinearLayout>
