--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -139,7 +139,7 @@
                         android:textColor="#ffffff"
                         android:textSize="25sp" />
 
-                    <TextView
+                    <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/str_NameHolder"
@@ -149,7 +149,7 @@
                         android:layout_margin="5dp"
                         android:gravity="center"
                         android:background="#ffffff"
-                        android:editable="true"
+                        android:hint="@string/str_NameHolder"
                         android:focusable="true"
                         android:focusableInTouchMode="true" />
                 </LinearLayout>
@@ -305,7 +305,7 @@
                                 android:textColor="#ffffff"
                                 android:textSize="25sp" />
 
-                            <TextView
+                            <EditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/str_NameHolder"
@@ -315,9 +315,9 @@
                                 android:layout_margin="5dp"
                                 android:gravity="center"
                                 android:background="#ffffff"
+                                android:hint="@string/str_NameHolder"
                                 android:focusableInTouchMode="true"
-                                android:focusable="true"
-                                android:editable="true" />
+                                android:focusable="true" />
 
                         </LinearLayout>
 
@@ -547,20 +547,34 @@
                                 android:textColor="#ffffff"
                                 android:textSize="25sp" />
 
-                            <TextView
+                            <EditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="@string/str_NameHolder"
+                                android:hint="@string/str_NameHolder"
                                 android:id="@+id/txtIpEntry"
                                 android:textColor="#000000"
                                 android:textSize="25sp"
                                 android:gravity="center"
                                 android:layout_margin="5dp"
                                 android:background="#ffffff"
-                                android:editable="true"
-                                android:inputType="number"
+                                android:inputType="phone"
                                 android:focusable="true"
                                 android:focusableInTouchMode="true" />
+
+                            <!--<TextView-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="@string/str_NameHolder"-->
+                                <!--android:id="@+id/txtIpEntry"-->
+                                <!--android:textColor="#000000"-->
+                                <!--android:textSize="25sp"-->
+                                <!--android:gravity="center"-->
+                                <!--android:layout_margin="5dp"-->
+                                <!--android:background="#ffffff"-->
+                                <!--android:editable="true"-->
+                                <!--android:inputType="number"-->
+                                <!--android:focusable="true"-->
+                                <!--android:focusableInTouchMode="true" />-->
 
                         </LinearLayout>
 
