Some string changes and added dims
Dims have not been configured for other devices

--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="your_turn_text_size">22dp</dimen>
+
+    <dimen name="credits_title">35sp</dimen>
+    <dimen name="credits_name">25sp</dimen>
 </resources>
