--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="your_turn_text_size">8dp</dimen>
+
+    <dimen name="credits_title">35sp</dimen>
+    <dimen name="credits_name">25sp</dimen>
 </resources>
